[java] uses --add-modules/--add-exports options in accessibility check (IDEA-169150)